# salve-mundi-leptos

./: .gitignore  Cargo.toml  README.md  index.html  package-lock.json  package.json  tailwind.config.js
.github/workflows/: gh-pages.yml
public/: manifest.json
public/activities/: boardgame-night.md  borrel.md  bowlen.md  karten.md  programming-comp-eindhoven.md  wijnproeverij.md
public/text/: home-this-is-salve-mundi.txt
src/: account.rs  activities.rs  commissions.rs  contact.rs  home.rs  login.rs  main.rs  merch.rs  nav.rs  stickers.rs  util.rs
