[package]
name = "salve-mundi-leptos"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.6", features = ["csr", "nightly"] }
leptos_router = { version = "0.6", features = ["csr", "nightly"] }
# serde = { version = "1.0", features = ["derive"] }
# serde_json = "1.0"
# serde_with = "3.9"
# thiserror = "1.0"