[package]
name = "salve-mundi-leptos"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", default-features = false }
gray_matter = { version = "0.2", default-features = false, features = [
    "yaml",
] }
leptos = { version = "0.6", features = ["csr", "nightly"] }
leptos_router = { version = "0.6", features = ["csr", "nightly"] }
pulldown-cmark = "0.12"
rust-embed = { version = "8.4", features = [
    "debug-embed",
    "include-exclude",
] }
serde = { version = "1.0", features = ["derive"] }
# serde_json = "1.0"
# serde_with = "3.9"
# thiserror = "1.0"